product and category Image update api
